# sysopy

./: .gitignore
kol/zad1/: main.c
kol/zad2/: main.c
kol/zad3/: main.c
kol/zad4/: main.c
kol/zad5/: main.c
kol/zad6/: main.c
kol/zad7/: main.c
kol/zad8/: main.c
kol/zad9/: main.c
kol1/zad1/: main.c
kol1/zad3/: main.c
kol1/zad4/: main.c
kol1/zad5/: main.c
kol1/zad6/: main.c
kol2/: kolos (2).c
kol2/zad1/: main.c
kol2/zad10/: common.txt  main.c
kol2/zad11/: receiver.c  sender.c
kol2/zad12/: receiver.c  sender.c
kol2/zad13/: zad1.c
kol2/zad14/: zad2.c
kol2/zad15/: main.c
kol2/zad2/: receiver.c  sender.c
kol2/zad3/: main.c
kol2/zad4/: main.c
kol2/zad5/: common.txt  main.c
kol2/zad6/: main.c
kol2/zad7/: common.txt  main.c
kol2/zad8/: receiver.c  sender.c
kol2/zad9/: receiver.c  sender.c
lab1/: kom.txt  runZad2.sh  test.sh
lab1/zad1/: CMakeLists.txt  library.c
lab1/zad2/: CMakeLists.txt  fileLARGE.txt  fileMEDIUM.txt  fileSMALL.txt  library.c  library.h  main.c  raport2.txt  run.sh
lab1/zad3/: CMakeLists.txt  library.c  library.h  main.c
lab1/zad3a/: CMakeLists.txt  fileSMALL.txt  kom.txt  library.c  main.c  mainDyn  mainLibDynamic.c  raport3a.txt  run.sh
lab1/zad3b/: CMakeLists.txt  fileLARGE.txt  kom.txt  library.c  main.c  mainLibDynamic.c  raport3b.txt  run.sh
lab10/zad1/: CMakeLists.txt  client.c  common.h  server.c  utils.h
lab10/zad2/: CMakeLists.txt  client.c  common.h  server.c  text.txt  utils.c  utils.h
lab2/zad1/: CMakeLists.txt  main.c  run.sh  wyniki.txt
lab2/zad2/: CMakeLists.txt  main.c  run.sh
lab3/zad1/: CMakeLists.txt  main.c  run.sh
lab3/zad2/: CMakeLists.txt  lista.txt  main.c  run.sh  tester.c
lab3/zad2/archiwum/: file1_2019-03-24_13-39-05  file2_2019-03-24_13-39-11  file3_2019-03-24_13-39-08
lab3/zad2/files/: file1  file2  file3
lab3/zad3/: CMakeLists.txt  main.c  run.sh  tester.c
lab3/zad3/files/: file1  file2
lab4/zad1/: CMakeLists.txt  main.c  main2.c  run.sh  script.sh
lab4/zad2/: CMakeLists.txt  lista.txt  main.c  run.sh
lab4/zad2/files/: file1  file2  file3
lab4/zad3/: CMakeLists.txt  catcher.c  run.sh  sender.c
lab4/zad3a/: CMakeLists.txt  catcher  catcher.c  run.sh  sender  sender.c
lab4/zad3b/: CMakeLists.txt  catcher.c  sender.c
lab5/zad1/: CMakeLists.txt  list.txt  main.c  run.sh
lab5/zad2/: CMakeLists.txt  master.c  slave.c
lab6/zad1/: CMakeLists.txt  chat.h  client.c  server.c  test.txt  test1.txt
lab6/zad2/: CMakeLists.txt  chat.h  client.c  main.c  server.c
lab7/zad1/: CMakeLists.txt  both.c  both.h  loader.c  trucker.c
lab7/zad2/: CMakeLists.txt  both.c  both.h  loader.c  trucker.c
lab8/zad1/: CMakeLists.txt  Times.txt  filter3.txt  filter33.txt  filtr.txt  imageFile.pgm  info.h  main.c  outFile.pgm  run.sh
lab9/zad1/: CMakeLists.txt  info.h  main.c
