cmake_minimum_required(VERSION 3.5.1)
project(zad3a C)

set(CMAKE_C_STANDARD 11)

if (${libraryType} STREQUAL "static")
    add_library(zad3aStatic STATIC library.c library.h)
    add_executable(mainStatic main.c)
    target_link_libraries(mainStatic zad3aStatic)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
elseif (${libraryType} STREQUAL "dynamic")
    add_library(zad3aDynamic MODULE library.c library.h)
    add_executable(mainDyn mainLibDynamic.c)
    target_link_libraries(mainDyn ${CMAKE_DL_LIBS})
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -ldl -Wl,-rpath=./")
elseif (${libraryType} STREQUAL "shared")
    add_library(zad3aShared SHARED library.c library.h)
    add_executable(mainShared main.c)
    target_link_libraries(mainShared zad3aShared)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
else ()
    message(FATAL_ERROR "Wrong library type specified")
endif ()